# coding-dojo-cpp-2014-04-12

./: README.md
SoundexDojo/: CMakeLists.txt
SoundexDojo/application/: main.cpp
SoundexDojo/application/class/: Soundex.cpp  Soundex.hpp
SoundexDojo/test/: main_test.cpp
SoundexDojo/test/testCase/: SoundexTest.cpp
